# vsm-cpp-ardupilot

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  docker-compose.yml  toolchain.mingw.cmake  vsm.conf
.github/workflows/: main.yml
doc/: default.conf
doc/pages/: user_guide.dox
dockerfiles/dev-env/base/: Dockerfile
dockerfiles/dev-env/linux/: Dockerfile
dockerfiles/dev-env/windows/: Dockerfile
include/: adsb_aircraft.h  ardupilot_vehicle.h  ardupilot_vehicle_manager.h  payload_protocol.h
linux/: build.sh
src/: adsb_aircraft.cpp  ardupilot_vehicle.cpp  ardupilot_vehicle_manager.cpp  main.cpp  payload_protocol.cpp
windows/: build.sh
